--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.3",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
